# duqtools

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  dash  mkdocs.yml  pyproject.toml  requirements.txt  requirements_full.txt  setup.cfg  sonar-project.properties
.github/: update_cov_db.py  update_cov_db_path.py
.github/workflows/: code-style.yml  publish.yaml  sonar.yaml  test.yaml  test_imas.yaml  test_imas2.yaml  test_publish.yaml
dash/: dash.py  requirements.txt
docs/: api.md  canonical.md  command-line-interface.md  create.md  dash.md  dissemination.md  duqtools.io.md  duqtools.jetto.md  duqtools.md  gendocs.py  genjettovariables.py  genvariables.py  imaspy.md  init.md  large_scale_validation.md  mkdocs.md  model_to_markdown.py  operations.md  plot.md  quickstart.md  quickstart_gateway.md  reference.md  requirements.txt  status.md  submit.md  usage.template.md  variables.md  visualization.md
docs/api/: index.md  operations.md
docs/config/: create.md  introduction.md  plot.md  setup.md  status.md  submit.md
docs/examples/: create_api.ipynb  demo_lsv_run.ipynb  demo_single_run.ipynb  duqmap.ipynb  duqtools_in_docker.ipynb  duqtools_on_prominence.ipynb  getting_started.ipynb  imas_handles.ipynb  index.md  xarray-2D.ipynb  xarray-ions.ipynb  xarray.ipynb
docs/jetto/: index.md
docs/overrides/: main.html
docs/scripts/: index.md  modify_data.md  modify_imas_data.md  plot_with_altair.md  plot_with_matplotlib.md
docs/systems/: index.md  submit.template.md
docs/templates/: __init__.py  template_create.md  template_index.md  template_introduction.md  template_jetto_variables.md  template_merge.md  template_plot.md  template_status.md  template_submit.md  template_usage.md  template_variables.md
duqtools/: __init__.py  __main__.py  _plot_utils.py  _types.py  analyze.py  cleanup.py  cli.py  config.py  create.py  dash.py  init.py  io.py  main.py  matrix_samplers.py  operations.py  plot.py  samplers.py  show.py  status.py  submit.py  system.py  utils.py
duqtools/config/: __init__.py  _config.py  _create.py  _description_helpers.py  _plot.py  _runs.py  _status.py  _submit.py  _system.py  _workdir.py  basemodel.py  config.py  create.py  imaslocation.py  plot.py  submit.py  system.py  workdir.py
duqtools/ids/: __init__.py  _copy.py  _get_ids_tree.py  _handle.py  _imas.py  _io.py  _location.py  _mapping.py  _operation.py  _rebase.py  _sampler.py  dimensions.py  handler.py  ids_copy.py  ids_location.py  ids_open.py  ids_simplify.py  imas_path.py  operation.py  sampler.py
duqtools/jetto/: __init__.py  _copy.py  _imas_functions.py  _jset.py  _llcmd.py  _namelist.py  _system.py  system.py
duqtools/models/: __init__.py  _runs.py  _system.py  system.py  workdir.py
duqtools/schema/: __init__.py  _description_helpers.py  _dimensions.py  _imas.py  _plot.py  basemodel.py  cli.py  data_location.py  dimensions.py  imas.py  matrix_samplers.py  plot.py  runs.py  work_dir.py  workdir.py
example/: config-init.yaml  config-simple.yaml  config.yaml  data.csv  duqtools.yaml  readme.md  template
example/template/: .llcmd  jetto.datadir  jetto.eqdsk_out  jetto.eqrestart_prev  jetto.jset  jintrac_imas_config.cfg  rjettov  utils_jetto
example/template_model/: jetto.in  jetto.jset  jetto.sin
hdf5test/: duqtools.yaml
imas/: build_imas_script.sh
notebooks/: create_api.ipynb  demo_single_run.ipynb  duqmap.ipynb  duqtools_in_docker.ipynb  imas_handles.ipynb  index.md
scripts/: analyse_im_runs.py  compare_im_bundle.py  compare_im_exp.py  compare_im_runs.py  config.yaml  data_for_testing.py  demo_modify_ti.py  imas_workflow.py  modify_imas_data.py  playground.ipynb  plot_with_altair.py  plot_with_altair_multi.py  plot_with_matplotlib.py  plot_with_matplotlib_multi.py  prepare_im_input.py  prepare_im_runs.py  sawteeth.py
src/duqtools/: __init__.py  _click_opt_groups.py  _job.py  _logging_utils.py  _plot_utils.py  _types.py  api.py  apply_model.py  cleanup.py  cli.py  create.py  dash.py  duqduqtools.py  duqmap.py  fitness.py  init.py  jettosystem.py  jintrac.py  list_variables.py  matrix_samplers.py  merge.py  operations.py  plot.py  setup.py  status.py  submit.py  sync_prominence.py  system.py  utils.py  variables.py
src/duqtools/config/: __init__.py  _config.py  _models.py  _schema_create.py  _schema_root.py  _variables.py
src/duqtools/dashboard/: Plotting.py  _shared.py  readme.md
src/duqtools/data/: duqtools.yaml  jetto_lookup.json  jetto_tools_lookup.json  (+4 more)
testing/: build_imas_script.sh  convert_to_ascii.py  core_profiles.ids  open_data.py  print_ids.py  print_ids_ascii.py  random_ds.ids  setup_imas_environment.md
testing/imasdb/: jet_123_1_core_profiles.ids
tests/: config_jetto.yaml  config_jetto_duqtools.yaml  config_jetto_python_tools.yaml  conftest.py  dry_run.yaml  dry_run_jettoduqtools.yaml  test_api.py  test_cli.py  test_cmdline.py  test_cmdline_config.yaml  test_cmdline_config_duqtools.yaml  test_cmdline_duqtools.py  test_cmdline_pythontools.py  test_create.py  test_custom_variable_operations.py  test_data.py  test_dry_run.py  test_dry_run_duqtools.py  test_dry_run_jettotools.py  test_duqmap.py  test_duqtools.py  test_ids2jetto_variables.py  test_io.py  test_operations.py  test_plot.py  test_samplers.py  variables.yaml
tests/ids/: idsmapping_sample_data.py  rebase_data.csv  rebase_data_out_ids.csv  rebase_data_out_time.csv  test_ids_operation.py  test_imas_handler.py  test_imas_import.py  test_mapping.py  test_rebase.py  test_xarray_interface.py
tests/jetto/: test_jetto_in.py  test_jetto_jset.py  test_jset.py  test_namelist.py  test_settings_manager.py  trimmed_jetto.in  trimmed_jetto.jset
tests/jettoduqtools/: test_jetto_in.py  test_jetto_jset.py  test_settings_manager.py
tests/lsv/: test_cli.py
tests/models/: runs_test.py
tests/schema/: dimensions_test.py  ranges_test.py
tests/test_data/: config.yaml  config_jetto.yaml  config_jetto.yaml.template  config_list-vars.yaml  data_4_col.csv  data_5_col.csv  jetto_lookup.json
(+125 files in other folders)
