# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Carbon Collective
author_email = s.smeets@esciencecenter.nl
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = Dynamic uncertainty quantification for Tokamak reactor simulations modelling
keywords =
    modelling
    uncertainty-quantification
    tokamak
    fusion-reactor
long_description = file: README.md
long_description_content_type = text/markdown
name = duqtools
project_urls =
    Bug Tracker = https://github.com/carboncollective/duqtools/issues
    Documentation = https://duqtools.readthedocs.io
url = https://github.com/carboncollective/duqtools
version = 0.3.0

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
install_requires =
    altair
    click
    f90nml
    gitpython
    # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
    importlib_resources
    numpy
    pandas
    pydantic
    pydantic-yaml
    ruamel.yaml
    scipy
    setuptools
    tqdm
    typing-extensions
    xarray

[options.extras_require]
develop =
    # deployment
    bump2version
    # linting
    isort
    pre-commit
    yapf
    mypy
    # testing
    nbmake
    pytest
    pytest-cov
    pytest-dependency
    pycodestyle
docs =
    jinja2
    mkdocs
    mkdocs-click
    mkdocs-jupyter
    mkdocs-gen-files
    mkdocs-material
    mkdocstrings[python]
publishing =
    twine
    wheel
    build
imas =
    imas
dash =
    streamlit

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  duqtools = duqtools.cli:cli

[coverage:run]
branch = True
source = duqtools
concurrency = multiprocessing
data_file = .coverage

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html --cov-config setup.cfg
norecursedirs=tests/helpers

[mypy]
ignore_missing_imports = True
files = duqtools, tests
allow_redefinition = True

[mypy-yaml.*]
ignore_missing_imports = True

[flake8]
exclude = scripts
max-line-length = 96
