# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = Dynamic uncertainty quantification for Tokamak reactor simulations modelling
keywords =
    modelling
    uncertainty-quantification
    tokamak
    fusion-reactor
long_description = file: README.md
long_description_content_type = text/markdown
name = duqtools
project_urls =
    Bug Tracker = https://github.com/duqtools/duqtools/issues
    Documentation = https://duqtools.readthedocs.io
url = https://github.com/duqtools/duqtools
version = 1.3.0


[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
install_requires =
    altair
    click
    gitpython
    # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
    # Note that the 3.9 stdlib implementation for `importlib.resources.files` fails with our case
    importlib_resources;python_version<'3.10'
    numpy
    pandas
    pydantic
    pydantic-yaml
    scipy
    tqdm
    xarray
    jetto-tools >= 1.8.8
    # Work-around for docker image which runs python 3.9.7
    # https://github.com/gitpython-developers/GitPython/issues/1332
    streamlit == 1.11;python_full_version=='3.9.7'
    streamlit >= 1.12;python_full_version!='3.9.7'


[options.extras_require]
develop =
    # deployment
    bump2version
    # linting
    isort
    pre-commit
    yapf
    mypy
    # testing
    coverage
    nbmake
    pytest
    pytest-dependency
    pycodestyle
docs =
    jinja2
    markdown-include
    mkdocs
    mkdocs-click
    mkdocs-jupyter
    mkdocs-gen-files
    mkdocs-material
    mkdocstrings[python]
publishing =
    twine
    wheel
    build
imas =
    imas


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  duqtools = duqtools.cli:cli_entry
  duqduq = duqtools.large_scale_validation.cli:cli_entry

[coverage:run]
branch = True
source = duqtools
concurrency = multiprocessing
data_file = .coverage

[tool:pytest]
testpaths = tests
norecursedirs=tests/helpers

[mypy]
ignore_missing_imports = True
files = duqtools, tests
allow_redefinition = True

[mypy-yaml.*]
ignore_missing_imports = True

[mypy-pkg_resources.*]
ignore_missing_imports = True

[flake8]
exclude = scripts
max-line-length = 96
